<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyHeight="11.054%p"
    android:keyWidth="8.333%p" >

    <Row>

        <Key
            android:codes="31"
            android:keyEdgeFlags="left" />

        <Key android:codes="1" />

        <Key android:codes="2" />

        <Key android:codes="3" />

        <Key android:codes="4" />

        <Key android:codes="5" />

        <Key android:codes="6" />

        <Key android:codes="7" />

        <Key android:codes="8" />

        <Key android:codes="9" />

        <Key android:codes="10" />

        <Key
            android:codes="@string/backspace"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/delete" />
    </Row>

    <Row>

        <Key
            android:codes="32"
            android:keyEdgeFlags="left" />

        <Key android:codes="11" />

        <Key android:codes="12" />

        <Key android:codes="13" />

        <Key android:codes="14" />

        <Key android:codes="15" />

        <Key android:codes="16" />

        <Key android:codes="17" />

        <Key android:codes="18" />

        <Key android:codes="19" />

        <Key android:codes="20" />
        <Key android:codes="37" 
             android:keyEdgeFlags="right" />

    </Row>

    <Row>

        <Key
            android:codes="33"
            android:keyEdgeFlags="left" />

        <Key android:codes="34" />
        <Key android:codes="35" />

        <Key android:codes="26" />

        <Key android:codes="27" />

        <Key android:codes="21" />

        <Key android:codes="22" />

        <Key android:codes="23" />

        <Key android:codes="24" />

        <Key android:codes="25" />

        <Key android:codes="38" />


        <Key
            android:codes="36"
            android:keyEdgeFlags="right" />
    </Row>

   <!--  <Row>

        <Key
            android:codes="75"
            android:keyEdgeFlags="left" />

        <Key android:codes="45" />

        <Key android:codes="46" />

        <Key android:codes="76" />

        <Key android:codes="50" />

        <Key android:codes="51" />

        <Key android:codes="77" />

        <Key android:codes="55" />

        <Key android:codes="56" />

        <Key android:codes="60" />

        <Key android:codes="83"
            android:keyEdgeFlags="right" />

       </Row>  -->
    <Row>

        <Key
            android:codes="@string/symbols"
            android:keyEdgeFlags="left"
            android:keyIcon="@drawable/shift"
            android:keyWidth="16.666%p" />

        <Key
            android:codes="@string/english"
            android:keyLabel="En" />

        <Key android:codes="28" />

        <Key
            android:codes="@string/space"
            android:keyWidth="33.333%p" />

        <Key android:codes="68" />

        <Key android:codes="73" />

        <Key android:codes="74" />

        <Key
            android:codes="@string/enter"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>

    <Row android:keyHeight="2.315%p" >
    </Row>

</Keyboard>