<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:animateLayoutChanges="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    tools:context="iit.android.settings.PreviewActivity"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seepreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/preview_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/seepreview"
                android:layout_weight="1"
                android:focusable="true"
                android:hint="@string/preview_your_settings" />

            <Button
                android:id="@+id/backToSetting"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/preview_edit_text"
                android:text="@string/back"
                android:background="@drawable/button"
                android:radius="10dp"
                android:textSize="14sp"
                android:textColor="#fff"
                style="@android:style/Theme.Black"
                />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>