<?xml version="1.0" encoding="utf-8"?>
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyHeight="6.65%p"
    android:keyWidth="14.285%p"
    android:background="@drawable/phone_portrait_shift"
     >

    <Row>

        <Key
            android:codes="75"
            android:keyEdgeFlags="left"
 		/>

        <Key
            android:codes="45" />

        <Key
            android:codes="46"/>

        <Key
            android:codes="47"/>

        <Key
            android:codes="48" />

        <Key
            android:codes="49"/>

        <Key
            android:codes="@string/backspace"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyHeight="13.4%p"
            android:keyIcon="@drawable/delete" />
    </Row>

    <Row>

        <Key
            android:codes="76"
            android:keyEdgeFlags="left"
            />

        <Key
            android:codes="50" />

        <Key
            android:codes="51" />

        <Key
            android:codes="52"/>

        <Key
            android:codes="53"/>
        <Key
            android:codes="54"
/>
    </Row>

    <Row>

        <Key
            android:codes="77"
            android:keyEdgeFlags="left"
 />

        <Key
            android:codes="55"
 />

        <Key
            android:codes="56"
/>

        <Key
            android:codes="57"
/>

        <Key
            android:codes="58"
/>

        <Key
            android:codes="59"
 />

        <Key
            android:codes="80"
            android:keyEdgeFlags="right"
            android:keyLabel="=" />
    </Row>

     <Row>

        <Key
            android:codes="78"
            android:keyEdgeFlags="left"
/>

        <Key
            android:codes="60"
 />

        <Key
            android:codes="61"
/>

        <Key
            android:codes="62"
/>

        <Key
            android:codes="63"
 />

        <Key
            android:codes="64"
     />

        <Key
            android:codes="81"
            android:keyEdgeFlags="right"
           />
    </Row> 

    <Row>

        <Key
            android:codes="79"
            android:keyEdgeFlags="left"
            />

        <Key
            android:codes="65"
            />

        <Key
            android:codes="66"
            />

        <Key
            android:codes="67"
            />

        <Key
            android:codes="68"
            />

        <Key
            android:codes="69"/>

        <Key
            android:codes="82"
            android:keyEdgeFlags="right"
            />
    </Row>

    <!-- <Row>

        <Key
            android:codes="87"
            android:keyEdgeFlags="left"
            android:keyLabel="\@" />

        <Key
            android:codes="88"
            android:keyLabel="&amp;" />

        <Key
            android:codes="89"
            android:keyLabel="\u0950" />

        <Key
            android:codes="90"
            android:keyLabel="\u00AE" />

        <Key
            android:codes="91"
            android:keyLabel="~" />

        <Key
            android:codes="92"
            android:keyLabel="&lt;" />

        <Key
            android:codes="93"
            android:keyEdgeFlags="right"
            android:keyLabel=">" />
    </Row>

    <Row>

        <Key
            android:codes="94"
            android:keyEdgeFlags="left"
            android:keyLabel="^" />

        <Key android:codes="95" />

        <Key android:codes="96" />

        <Key
            android:codes="97"
            android:isRepeatable="true" />

        <Key android:codes="98" />

        <Key
            android:codes="99"
            android:keyLabel="(" />

        <Key
            android:codes="100"
            android:keyEdgeFlags="right"
            android:keyLabel=")" />
    </Row>-->

    <Row> 

        <!-- requires keyIcon -->

        <Key
            android:codes="@string/symbols"
            android:keyEdgeFlags="left"
            android:keyHeight="13.4%p"
            android:keyIcon="@drawable/shift" />

        <Key android:codes="70" />

        <Key
            android:codes="71"
            android:isRepeatable="true"
            android:isSticky="true" />

        <Key
            android:codes="72"
            android:isRepeatable="true" />

        <Key
            android:codes="73"
            android:isRepeatable="true" />

        <Key
            android:codes="74"
            android:keyLabel="{" />

        <Key
            android:codes="83"
            android:keyEdgeFlags="right"/>
    </Row>

    <Row android:keyHeight="6.65%p" >

        <Key
            android:codes="@string/english"
            android:horizontalGap="14.285%p"
            android:keyLabel="En" />

        <Key
            android:codes="@string/space"
            android:keyWidth="42.86%p" />

        <Key
            android:codes="@string/enter"
            android:isRepeatable="true"
            android:keyIcon="@drawable/sym_keyboard_return"
            android:keyWidth="28.57%p" />
    </Row>

    <Row android:keyHeight="1.25%p" >
    </Row>

</Keyboard>